mutants.out.old/log/src__proto__single__ent__progress.rs_line_146_col_9.log

*** src/proto/single/ent/progress.rs:146:9: replace Progress::update_percent -> ProgressUpdate with Default::default()

*** mutation diff:
--- src/proto/single/ent/progress.rs
+++ replace Progress::update_percent -> ProgressUpdate with Default::default()
@@ -138,19 +138,16 @@
     pub desc: Option<String>,
 }
 
 impl Progress {
     /// Create an instance of `ProgressUpdate` for the job updating its completion percentage.
     ///
     /// This will copy the [`desc`](Progress::desc) from the `Progress` (retrieved) over to `ProgressUpdate` (to be sent).
     pub fn update_percent(&self, percent: u8) -> ProgressUpdate {
-        ProgressUpdate::builder(self.jid.clone())
-            .desc(self.desc.clone())
-            .percent(percent)
-            .build()
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// Create an instance of `ProgressUpdateBuilder` for the job.
     pub fn update_builder(&self) -> ProgressUpdateBuilder {
         ProgressUpdateBuilder::new(self.jid.clone())
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `ProgressUpdate: Default` is not satisfied
   --> src/proto/single/ent/progress.rs:146:9
    |
146 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ProgressUpdate`
    |
help: consider annotating `ProgressUpdate` with `#[derive(Default)]`
    |
17  + #[derive(Default)]
18  | pub struct ProgressUpdate {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
